find_package(CUDA REQUIRED)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CUDA_PROPAGATE_HOST_FLAGS ON)
cuda_add_executable(info main.cu)
set_property(TARGET info PROPERTY CUDA_STANDARD 11)
set_property(TARGET info PROPERTY CUDA_STANDARD_REQUIRED ON)

# MESSAGE(STATUS "CMAKE_CUDA_FLAGS: ${CMAKE_CUDA_FLAGS}")
# MESSAGE(STATUS "CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")